# llama-play

./: README.md
llama-play/: Modelfile  README.md  boltfile.py  main.py  pyproject.toml
llama-play/src/: about.py  analyzers.py  example.py  llama_config.py  llama_logging.py
llama-play/tests/test_src/: test_about.py  test_analyzers.py
