[project]
name = "llama-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.4.8",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = [
    "assertpy>=1.1",
    "bolt-ta>=0.4.1",
    "conttest>=0.0.8",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
]
